--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "assemble-example",
-  "description": "Example Assemble project.",
-  "version": "0.1.1",
-  "homepage": "https://github.com/jonschlinkert/assemble-example",
-  "author": {
-    "name": "Jon Schlinkert",
-    "url": "https://github.com/jonschlinkert"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jonschlinkert/assemble-example.git"
-  },
-  "bugs": {
-    "url": "https://github.com/jonschlinkert/assemble-example/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jonschlinkert/assemble-example/blob/master/LICENSE-MIT"
-    }
-  ],
-  "main": "index.js",
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "dependencies": {},
+  "name": "VichyATHomeBanner",
+  "version": "1.0.0",
+  "description": "",
+  "main": "Gruntfile.js",
+  "author": "Stefan Wilhelm <swilhelm@bplusd.de>",
+  "license": "none",
   "devDependencies": {
-    "grunt": "~0.4.3",
-    "assemble": "~0.4.37"
+    "autoprefixer": "^6.7.4",
+    "cssnano": "^3.10.0",
+    "grunt": "^1.0.1",
+    "grunt-assemble": "^0.5.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-dev-update": "^2.0.0",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sync": "^0.6.2"
   },
-  "keywords": []
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "dependencies": {
+  }
 }
